# SC-2025-2026

./: .gitignore  README.md  pyproject.toml
projets/: README.md  affectation.py
projets/06/: README.md
seance01/: 01.py  README.md
seance02/: README.md  data.py  graphe.py  test_data.py
seance03/: README.md  data.py  graphe.py  solution.py  test_data.py  test_graphe.py
seance04/: README.md  graphe.py  test_graphe.py
seance05/: 05.py  README.md
seance06/: 06.py  README.md  data.py
seance07/: README.md  data.py  resolution.py  test_data.py
seance08/: README.md  app.py  data.py  resolution.py  test_data.py  test_resolution.py
seance09/: README.md  app.py  genere_connexions_sncf.py  resolution.py  test_resolution.py
seance10/: 10.py  README.md
seance11/: 11.py  README.md  data.py  resolution.py  test_data.py  test_resolution.py
seance12/: README.md  data.py  resolution.py  test_data.py  test_resolution.py
seance13/: 13.py  README.md
seance14/: README.md
