[project]
name = "sc-2025-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.19.6",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "polars>=1.37.1",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
